data/derived/comb/progs/unify/prog6349.ml.out
Characters 88-92:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a -> 'b
